
Lime r36 [UTC+9 2018.8.5. AM 07:45]
- Update Library (LibUIDropDownMenu)


Lime r35 [UTC+9 2018.8.5. PM 08:15]
- Fixed a bug: raid manager are not properly displayed.


Lime r34 [UTC+9 2018.8.3. PM 06:10]
- No longer register an Spelltimer with the Spell name.


Lime r33 [UTC+9 2018.8.3. PM 02:55]
- Threat arrow should now look normal.
- Improved: Now you can specify up to three Outline functions.
- Improved: The outline has been adjusted for a better look.
- Removed: LibAuras (Memory Leak Issue)
- Temporary Removed: Raid Buffs (Memory Leak Issue)
- Resolved: Memory leak during combat.
- CPU usage was reduced by about 5%.
- Due to the data structure change, the profile will be initialized upon update to this version.


Lime r32 [2018.7.23.]
- Fixed an issue that was not easily outlined under certain circumstances.
- Adjusted the frame priority.
- Display a legion potion temporarily.


Lime r31 [2018.7.22.]
- translated missing strings. (enUS)


Lime r30 [2018.7.21.]
- added color when people are not in range.
- remove buff debug string


Lime r29 [2018.7.21.]
- Removed mp3 resources, and converted to ogg/vorbis.
- [for developer only] I've added Korean comment to some files.


Lime r28 [2018.7.20.]
- Minor bugs fix


Lime r27 [2018.7.19.]
- Fixed bug: the skill book list doesn't appear correctly.
- Add help for profile commands.
- Add: toggle on/off spell ID on tooltip.


Lime r26 [2018.7.19.]
- Remove Debug code


Lime r25 [2018.7.19.]
- You can register an Spelltimer with the Spell name. This consumes significant CPU resources.
- Minor bug fixed.


Lime r24 [2018.7.19.]
- CPU usage has been reduced by about 10%.
- Updates LibAura.


Lime r23 [2018.7.14.]
- Support the Battle for Azeroth Pre-Patch.


Lime r22 [2018.7.12.]
- fixed to missing string.


Lime r21 [2018.7.8.]
- Update locale files.
- Highlight some dangerous functions in red color.


Lime r20 [2018.7.8.]
- Support BfA 8.0.1.27026 client.
- Change the default language to English.